# rofi-workspace

./: .gitignore  AUTHORS  Makefile.am  PKGBUILD  configure.ac  format.sh
m4/: ax_cxx_compile_stdcxx_17.m4
src/: qalc.cpp  test_workspace.cpp  workspace.cpp  workspace.h
